<resources>
    <string name="app_name">Weekly Exercise Tracker</string>
    <string name="title_hint">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="mon">M</string>
    <string name="tue">Tu</string>
    <string name="wed">W</string>
    <string name="thu">Th</string>
    <string name="fri">F</string>
    <string name="sat">Sa</string>
    <string name="sun">Su</string>
    <string name="all_routines">All Routines</string>
    <string name="new_routine">New Routine</string>
    <string name="add_routine_title">Add New Routine</string>
    <string name="show_routines_title">All Routines</string>
    <string name="manage_routines">Manage Routines</string>
    <string name="daily_routine_title">Today\'s Routine</string>
</resources>
