<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            android:hint="@string/title_hint"
            android:inputType="textAutoCorrect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/repeat_type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_edit_text">

        <RadioButton
                android:id="@+id/daily_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m"
                android:text="@string/daily" />

        <RadioButton
                android:id="@+id/weekly_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_m"
                android:text="@string/weekly" />
    </RadioGroup>

    <RadioGroup
            android:id="@+id/day_select_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/spacing_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_type_radio_group">

        <RadioButton
                android:id="@+id/mon_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

        <RadioButton
                android:id="@+id/tue_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

        <RadioButton
                android:id="@+id/wed_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />

        <RadioButton
                android:id="@+id/thu_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

        <RadioButton
                android:id="@+id/fri_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

        <RadioButton
                android:id="@+id/sat_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />

        <RadioButton
                android:id="@+id/sun_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />
    </RadioGroup>

    <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_select_radio_group" />

    <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_m"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/save_button"
            app:layout_constraintTop_toBottomOf="@id/day_select_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>